Minimal changes in templates to do fast login/logout

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Codeopticon</title>
+    <link href="/style/app.css" rel="styleSheet" type="text/css" />
   </head>
   <body>
     {{{body}}}
