--- a/views/main.hbs
+++ b/views/main.hbs
@@ -2,7 +2,7 @@
 {{> forms/watch }}
 <ul id="repos">
 {{#each repos}}
-  <li data-user="{{value this "spy.user"}}" data-repo="{{value this "spy.repo"}}">
+  <li data-type="repo" data-user="{{value this "spy.user"}}" data-repo="{{value this "spy.repo"}}">
   {{value this "spy.user"}}/{{value this "spy.repo"}}
   </li>
 {{/each}}
