--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,3 +1,4 @@
 <footer>
 </footer>
+<script defer src="components/jquery/dist/jquery.min.js"></script>
 <script defer src="scripts/app.js"></script>
