Setting js files in the proper layout

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,5 +8,7 @@
   <body>
     {{{body}}}
     {{> footer }}
+    <script defer src="components/jquery/dist/jquery.min.js"></script>
+    <script defer src="scripts/app.js"></script>
   </body>
 </html>
