Doing form post via ajax, still missing the refresh

--- a/views/partials/forms/watch.hbs
+++ b/views/partials/forms/watch.hbs
@@ -1,4 +1,4 @@
-<form method="POST" action='/api/spies'>
+<form id="addSpy" method="POST" action='/api/spies'>
   <label for="githubFile">Github file</label>
   <input type="text" name="githubUrl"></input>
   <input type="submit" value="Watch"></input>
