--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -9,6 +9,7 @@
     {{{body}}}
     {{> footer }}
     <script defer src="components/jquery/dist/jquery.min.js"></script>
+    <script defer src="components/handlebars/handlebars.min.js"></script>
     <script defer src="scripts/app.js"></script>
   </body>
 </html>
